--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "studio-media-api",
   "private": true,
   "scripts": {
-    "build": "nitro build",
+    "build": "prisma generate && nitro build",
     "dev": "nitro dev",
     "prepare": "nitro prepare",
     "preview": "node .output/server/index.mjs"
