--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@lucia-auth/adapter-prisma": "^3.0.2",
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^5.13.0",
+    "dotenv": "^16.4.5",
     "file-type": "^19.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "formidable": "^3.5.1",
