--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "studio-media-api",
   "private": true,
   "scripts": {
-    "build": "prisma generate && nitro build",
+    "build": "prisma generate && nitro build && npm run copy-deps",
+    "copy-deps": "cp -R ./node_modules/.pnpm/node-datachannel@0.8.0/node_modules/node-datachannel/build ./.output/server/node_modules/node-datachannel/",
     "dev": "nitro dev",
     "prepare": "nitro prepare",
     "preview": "node .output/server/index.mjs"
@@ -20,8 +21,6 @@
     "@bitsongjs/metadata": "^0.2.1",
     "@bitsongjs/telescope": "3.0.0-dev.23",
     "@chainsafe/libp2p-gossipsub": "^13.0.0",
-    "@helia/car": "^3.1.5",
-    "@helia/dag-cbor": "^3.0.4",
     "@helia/unixfs": "^3.0.6",
     "@helia/verified-fetch": "^1.3.13",
     "@ipld/car": "^5.3.0",
