--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^5.13.0",
     "blockstore-level": "^1.1.8",
     "cid": "^0.1.0",
+    "consola": "^3.2.3",
     "datastore-level": "^10.1.8",
     "dotenv": "^16.4.5",
     "file-type": "^19.0.0",
