--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "file-type": "^19.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "formidable": "^3.5.1",
+    "graphql-request": "^6.1.0",
     "helia": "^4.2.0",
     "lucia": "^2.7.7",
     "nanoid": "^5.0.7",
