--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@lucia-auth/adapter-prisma": "^3.0.2",
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^5.13.0",
+    "blockstore-fs": "^1.1.10",
     "blockstore-level": "^1.1.8",
     "cid": "^0.1.0",
     "consola": "^3.2.3",
+    "datastore-fs": "^9.1.8",
     "datastore-level": "^10.1.8",
     "dotenv": "^16.4.5",
     "file-type": "^19.0.0",
@@ -38,6 +40,8 @@
     "formidable": "^3.5.1",
     "graphql-request": "^6.1.0",
     "helia": "^4.2.0",
+    "it-all": "^3.0.6",
+    "it-drain": "^3.0.7",
     "lucia": "^2.7.7",
     "nanoid": "^5.0.7",
     "range-parser": "^1.2.1",
