--- a/package.json
+++ b/package.json
@@ -21,30 +21,19 @@
     "@aws-sdk/s3-request-presigner": "^3.565.0",
     "@bitsongjs/metadata": "^0.2.1",
     "@bitsongjs/telescope": "3.0.0-dev.23",
-    "@chainsafe/libp2p-gossipsub": "^13.0.0",
-    "@helia/unixfs": "^3.0.6",
-    "@helia/verified-fetch": "^1.3.13",
-    "@ipld/car": "^5.3.0",
     "@lucia-auth/adapter-prisma": "^3.0.2",
+    "@nftstorage/ipfs-cluster": "^5.0.1",
     "@pinata/sdk": "^2.1.0",
     "@prisma/client": "^5.13.0",
-    "blockstore-fs": "^1.1.10",
-    "blockstore-level": "^1.1.8",
-    "cid": "^0.1.0",
     "consola": "^3.2.3",
-    "datastore-fs": "^9.1.8",
-    "datastore-level": "^10.1.8",
     "dotenv": "^16.4.5",
     "file-type": "^19.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "formidable": "^3.5.1",
     "graphql-request": "^6.1.0",
-    "helia": "^4.2.0",
-    "it-all": "^3.0.6",
-    "it-drain": "^3.0.7",
+    "kubo-rpc-client": "^4.1.1",
     "lucia": "^2.7.7",
     "nanoid": "^5.0.7",
-    "range-parser": "^1.2.1",
     "sharp": "^0.33.3",
     "uuid": "^9.0.1",
     "zod": "^3.23.5"
